# TextEditor

./: .gitignore  Build.Release.bat  Build.Release.sh  BumbVersion.cmake  CMakeLists.txt  CPack.apple.cmake  CPack.cmake  CPack.unix.cmake  CPack.windows.cmake  GenerateVersion.cmake  GetGitTag.cmake  LICENSE.txt  version.h.in
.github/workflows/: build.yml  create_release.yml  create_release_test.yml  macOs.yml  release_github.yml  release_major.yml  release_minor.yml  release_patch.yml  test.yml  ubuntu.yml  windows.yml
TextEditor/: CMakeLists.txt  main.c
TextEditor/include/: version.h
